# sun-graph-screenshot

./: README.md  capture.py  pyproject.toml
.github/workflows/: capture.yml
