[tool.poetry]
name = "sun-graph-screenshot"
version = "0.1.0"
description = ""
authors = ["Trung Ngo <ndtrung4419@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
playwright = "^1.49.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
